# twpazer

./: LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: compare-fit.ipynb  compute-v3-gain.ipynb  sonnet-results-analysis-v3.ipynb  sonnet-results-analysis-vs-d.ipynb  sonnet-results-analysis-vs-eps.ipynb  test-sonnet-analysis.ipynb  ultrahigh-kinetic-inductance-analyzer.ipynb
scripts/: Z0analyzer.py  sidrename.py
src/twpazer/: __init__.py  freader.py  sazer.py  sreader.py  utils.py  vnautils.py
