[build-system]	
requires      = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name    = "twpazer"
authors = [
    {name  = "Andrea Giachero", email = "andrea.giachero@mib.infn.it"},
]
version         = "0.0.1"
description     = "Package to analyze data from TWPA simulations and real data"
readme          = "README.md"
requires-python = ">=3.8"
license         = {file = "LICENSE"}
classifiers     = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]


dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

